--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cy.open": "npx cypress open"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Olga Shmeleva",
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^6.1.2",
